@@ -1,3 +1,9 @@
+2007-05-06  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/plugins/lib3ds/gameswf_3ds.*: more readable, fixed memory leak & cleanup
+	* gameswf/gameswf_render_handler_ogl.cpp: 
+	added m_texture=0 operator after glDeleteTexture() for debuging memory leaks
+
 2007-05-03  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf_environment.cpp: in load_file() function strncmp() ==> strnicmp()
